temp/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>C501_BloodBorneP_Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blood Borne Pathogen Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Certs_Expiring_Message__c</fullName>
        <label>Certs Expiring Message</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C501_Clean_Both_Mobile_Numbers__c</fullName>
        <description>Both Cleaned Numbers to compare to input in Flow to lookup Contacts for communication preferences.</description>
        <formula>C501_Clean_Mobile_Phone__c  +  &apos; &apos;  +  C501_Clean_Imagine_Mobile_Phone__c</formula>
        <label>Clean Both Mobile Numbers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Clean_Imagine_Mobile_Phone__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(  Imagine_Mobile_Phone__c  , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <label>Clean Imagine Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Clean_Mobile_Phone__c</fullName>
        <description>clean phone number to match for Twilio.</description>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( MobilePhone , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <label>Clean Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Cpr_Cert_Days_Remaining__c</fullName>
        <formula>ii_Cpr_Cert_Date__c - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cpr Cert Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_EAS_Access_Code__c</fullName>
        <label>EAS Access Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_EAS_Attendance_Status__c</fullName>
        <label>EAS Attendance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>InProcess</fullName>
                </value>
                <value>
                    <fullName>InCompliance</fullName>
                </value>
                <value>
                    <fullName>OutOfCompliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_EAS_Due_Date__c</fullName>
        <description>Electronic Attendance System Last Day to Comply</description>
        <inlineHelpText>Electronic Attendance System Last Day to Comply</inlineHelpText>
        <label>EAS Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_EAS_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAS Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_EAS_Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAS Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Email_Opt_Out_by_Contact_Date__c</fullName>
        <description>Date stamp of when the contact opted out of email. Populated by the public flow.</description>
        <label>Email Opt Out by Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_FFN_Type__c</fullName>
        <label>FFN Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FFN-Existing</fullName>
                </value>
                <value>
                    <fullName>FFN-New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_First_Aid_Cert_Days_Remaining__c</fullName>
        <formula>ii_First_Aid_Cert_Date__c - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Aid Cert Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_First_Aid_Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Aid Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Food_Handler_Cert_Remaining_Days__c</fullName>
        <formula>ii_Food_Handler_Cert_Date__c - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Handler Cert Remaining Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Health_Safety_Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health &amp; Safety Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Imagine_WA_County__c</fullName>
        <inlineHelpText>This field should reflect county of residence. If the contact lives out of state, this should be the WA County closest to their residence. It is used for outreach.</inlineHelpText>
        <label>Imagine WA County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_WA_Counties</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Infant_CPR_Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infant CPR Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_PBC_Cert_Remaining_Days__c</fullName>
        <formula>ii_PBC_Expiration__c - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBC Cert Remaining Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Relative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_SMS_Opt_Out__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_SMS_Out_Out_by_Contact_Date__c</fullName>
        <description>Date stamp of when the contact opted out of SMS. Populated when the public flow is completed by user.</description>
        <label>SMS Out Out by Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_Safe_Sleep_Cert_Remaining_Days__c</fullName>
        <formula>ii_Safe_Sleep_Cert_Date__c - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Safe Sleep Cert Remaining Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Safe_Sleep_Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safe Sleep Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director_Owner_Licensee__c</fullName>
        <label>Director / Owner / Licensee</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Imagine_Email__c</fullName>
        <description>Imagine verified Email which won&apos;t be updated during import process</description>
        <inlineHelpText>Imagine verified Email</inlineHelpText>
        <label>Imagine Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Imagine_Home_Phone__c</fullName>
        <description>Imagine verified Home Phone which won&apos;t be updated during import process</description>
        <inlineHelpText>Imagine verified Home Phone</inlineHelpText>
        <label>Imagine Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Imagine_Mobile_Phone__c</fullName>
        <description>Imagine verified Mobile Phone which won&apos;t be updated during import process</description>
        <inlineHelpText>Imagine verified Mobile Phone</inlineHelpText>
        <label>Imagine Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PREPARE_Class__c</fullName>
        <label>PREPARE Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PREPARE_Cohort__c</fullName>
        <label>PREPARE Cohort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Somali</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ii_AM_Campus_User_Upload__c</fullName>
        <description>Date Absence Management Campus User Uploaded</description>
        <inlineHelpText>Date Absence Management Campus User Uploaded</inlineHelpText>
        <label>ii AM Campus User Upload</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ii_AM_Upload__c</fullName>
        <description>Date uploaded to Absence Management</description>
        <inlineHelpText>Date uploaded to Absence Management</inlineHelpText>
        <label>ii_AM_Upload</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ii_Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ii_Annual_Continuing_Education_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Continuing Education Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Child_Abuse_Cert_Date__c</fullName>
        <label>Child Abuse Cert Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Child_Abuse_Cert_Status__c</fullName>
        <label>Child Abuse Cert Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_County__c</fullName>
        <label>County</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Cpr_Cert_Date__c</fullName>
        <label>Cpr Cert Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Cpr_Cert_Status__c</fullName>
        <label>Cpr Cert Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_DEL_Licensing_Office__c</fullName>
        <label>DEL Licensing Office</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_DEL_Licensing_Region__c</fullName>
        <label>DEL Licensing Region</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Early_Achievers_Participation_Status__c</fullName>
        <label>Early Achievers Participation Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Eligible_For_Substitute_Pool_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible For Substitute Pool Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Eligible_Substitute_Pool_Status_Date__c</fullName>
        <label>Eligible For Substitute Pool Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_FFP_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FFP Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Documentation_Status_Date__c</fullName>
        <label>Facility Documentation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Name__c</fullName>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Orientation_Status_Date__c</fullName>
        <label>Facility Orientation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Orientation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility Orientation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Type__c</fullName>
        <label>Facility Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_FamLink_Id__c</fullName>
        <description>Fam Link Id is the unique Id for tracking Contact - Facilities for Sub Pool (value managed by SubPool Import Process)</description>
        <externalId>true</externalId>
        <inlineHelpText>Fam Link Id is the unique Id for tracking Contact - Facilities for Sub Pool (value managed by SubPool Import Process)</inlineHelpText>
        <label>FamLink Id</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ii_First_Aid_Cert_Date__c</fullName>
        <label>First Aid Cert Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_First_Aid_Cert_Status__c</fullName>
        <label>First Aid Cert Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Food_Handler_Cert_Date__c</fullName>
        <label>Food Handler Cert Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Food_Handler_Cert_Status__c</fullName>
        <label>Food Handler Cert Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Hiv_Cert_Date__c</fullName>
        <label>Hiv Cert Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Hiv_Cert_Status__c</fullName>
        <label>Hiv Cert Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Initial_Training_Req_Completed_Year__c</fullName>
        <label>Initial Training Req Completed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Initial_Training_Requirement__c</fullName>
        <label>Initial Training Requirement</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>custom_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ii_License_Number__c</fullName>
        <label>License Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_License_Status__c</fullName>
        <label>License Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Licensed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licensed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Member_ID__c</fullName>
        <description>Member Id for Unionware
User Id for Substitute Pool</description>
        <externalId>true</externalId>
        <inlineHelpText>Member Id for Unionware
User Id for Substitute Pool</inlineHelpText>
        <label>Member Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Member_Subtype_Name__c</fullName>
        <label>Member Subtype Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Mentor_Program__c</fullName>
        <label>Mentor Program</label>
        <summaryFilterItems>
            <field>ii_Program_Membership__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Mentor</value>
        </summaryFilterItems>
        <summaryForeignKey>ii_Program_Membership__c.Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ii_Not_Approved_Reasons__c</fullName>
        <label>Not Approved Reasons</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Orientation_Date__c</fullName>
        <label>Orientation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Orientation_Incomplete_Reason__c</fullName>
        <label>Orientation Incomplete Reason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Orientation_Status__c</fullName>
        <label>Orientation Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_PBC_Expiration__c</fullName>
        <label>PBC Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_PBC_Status__c</fullName>
        <label>PBC Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Participation_Status__c</fullName>
        <label>Participation Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Primary_Language__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>custom_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ii_Race__c</fullName>
        <label>Race</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Rating_Level__c</fullName>
        <label>Rating Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_RecordType_Previous__c</fullName>
        <label>RecordType Previous</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Substitute</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ii_SSPS_Number_Matching__c</fullName>
        <description>SSPS Number Matching is used to cross reference contacts between programs.</description>
        <inlineHelpText>SSPS Number Matching is used to cross reference contacts between programs.</inlineHelpText>
        <label>SSPS# Matching</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_SSPS_Number__c</fullName>
        <description>SSPS # is the unique Id for tracking Contact - Training and FFNs (value managed by Training and FFN Import Process).  Merit uses SSPS#, Unionware uses Provider Number</description>
        <externalId>true</externalId>
        <inlineHelpText>SSPS # is the unique Id for tracking Contact - Training and FFNs (value managed by Training and FFN Import Process).  Merit uses SSPS#, Unionware uses Provider Number</inlineHelpText>
        <label>SSPS#</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ii_Safe_Sleep_Cert_Date__c</fullName>
        <label>Safe Sleep Cert Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Safe_Sleep_Cert_Status__c</fullName>
        <label>Safe Sleep Cert Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Serving_Children_On_Subsidy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serving Children On Subsidy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Stars_Id_Matching__c</fullName>
        <description>Stars Id Matching is used to cross reference contacts between programs.</description>
        <inlineHelpText>Stars Id Matching is used to cross reference contacts between programs.</inlineHelpText>
        <label>Stars Id Matching</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Stars_Id__c</fullName>
        <description>Stars Id is the unique Id for tracking Contact - Substitutes for Sub Pool (value managed by SubPool Import Process)</description>
        <externalId>true</externalId>
        <inlineHelpText>Stars Id is the unique Id for tracking Contact - Substitutes for Sub Pool (value managed by SubPool Import Process)</inlineHelpText>
        <label>Stars Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ii_Sub_Pool_Status_Date__c</fullName>
        <label>Sub Pool Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Sub_Pool_Status__c</fullName>
        <description>Status comes in during import of Merit.  All records not updated during import are set to Inactive.</description>
        <label>Sub Pool Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Finishing Qualifications</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ii_Substitute_Pool_Status_Date__c</fullName>
        <label>Substitute Pool Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Substitute_Pool_Status__c</fullName>
        <description>Use the value coming from MERIT, for any facility contact not in the import list then set to Not Approved (Existing Field from above)</description>
        <label>Substitute Pool Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Finishing Qualifications</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ii_Tb_Cert_Date__c</fullName>
        <label>Tb Cert Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Tb_Cert_Status__c</fullName>
        <label>Tb Cert Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Unit_Status__c</fullName>
        <label>Unit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>custom_Unit_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ii_Username__c</fullName>
        <label>Username</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>New General Contact RecordType for Merging all other Record Types except Facility</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facility</fullName>
        <active>true</active>
        <label>Facility</label>
    </recordTypes>
</CustomObject>